--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "main": "index.js",
   "scripts": {
     "lint": "node_modules/.bin/eslint lib/** models/**",
-    "setup": "DEBUG=platziverse:* node setup.js"
+    "setup": "DEBUG=platziverse:* node setup.js",
+    "test": "DEBUG=platziverse:* ava tests/ --verbose"
   },
   "author": "Fabián Veliz <velizfabianhoracio@gmail.com> (https://twitter.com/fabianvelizok)",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^4.14.0"
+    "ava": "^0.24.0",
+    "eslint": "^4.14.0",
+    "sqlite3": "^3.1.13"
   },
   "dependencies": {
     "chalk": "^2.3.0",
     "debug": "^3.1.0",
+    "defaults": "^1.0.3",
     "inquirer": "^4.0.2",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
