--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "lint": "node_modules/.bin/eslint lib/** models/**",
     "setup": "DEBUG=platziverse:* node setup.js",
-    "test": "DEBUG=platziverse:* ava tests/ --verbose"
+    "test": "DEBUG=platziverse:* nyc --reporter=lcov ava tests/ --verbose"
   },
   "author": "Fabián Veliz <velizfabianhoracio@gmail.com> (https://twitter.com/fabianvelizok)",
   "license": "MIT",
   "devDependencies": {
     "ava": "^0.24.0",
     "eslint": "^4.19.1",
+    "nyc": "^11.7.1",
     "sqlite3": "^3.1.13"
   },
   "dependencies": {
