--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "ava": "^0.24.0",
     "eslint": "^4.19.1",
     "nyc": "^11.7.1",
+    "proxyquire": "^2.0.1",
+    "sinon": "^4.5.0",
     "sqlite3": "^3.1.13"
   },
   "dependencies": {
