--- a/platziverse-mqtt/package.json
+++ b/platziverse-mqtt/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "A simple IoT platform - MQTT Server",
   "main": "server.js",
-  "scripts": {},
+  "scripts": {
+    "start": "NODE_ENV=production node server.js",
+    "start-dev": "DEBUG=platziverse:* nodemon server.js",
+    "lint": "standard"
+  },
   "author": "Fabián Veliz <velizfabianhoracio@gmail.com> (https://twitter.com/fabianvelizok)",
   "license": "MIT",
   "repository": "git@github.com:fabianvelizok/platziverse.git",
@@ -11,5 +15,11 @@
   "devDependencies": {
     "nodemon": "^1.17.3",
     "standard": "^11.0.1"
+  },
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "debug": "^3.1.0",
+    "mosca": "^2.8.1",
+    "redis": "^2.8.0"
   }
 }
