--- a/platziverse-agent/package.json
+++ b/platziverse-agent/package.json
@@ -12,5 +12,11 @@
   },
   "devDependencies": {
     "standard": "^11.0.1"
+  },
+  "dependencies": {
+    "debug": "^3.1.0",
+    "defaults": "^1.0.3",
+    "mqtt": "^2.18.1",
+    "uuid": "^3.2.1"
   }
 }
