--- a/platziverse-api/package.json
+++ b/platziverse-api/package.json
@@ -10,11 +10,14 @@
   "scripts": {
     "start": "NODE_ENV=production node server.js",
     "start-dev": "DEBUG=platziverse:* nodemon server.js",
-    "lint": "standard"
+    "lint": "standard",
+    "test": "DEBUG=platziverse:* ava tests/ --verbose"
   },
   "devDependencies": {
+    "ava": "^0.25.0",
     "nodemon": "^1.17.5",
-    "standard": "^11.0.1"
+    "standard": "^11.0.1",
+    "supertest": "^3.1.0"
   },
   "dependencies": {
     "chalk": "^2.4.1",
