--- a/platziverse-api/package.json
+++ b/platziverse-api/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "debug": "^3.1.0",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "platziversedb": "file:../platziverse-db"
   }
 }
