--- a/platziverse-api/package.json
+++ b/platziverse-api/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "ava": "^0.25.0",
+    "express-asyncify": "^1.0.0",
     "nodemon": "^1.17.5",
     "standard": "^11.0.1",
     "supertest": "^3.1.0"
@@ -23,6 +24,7 @@
     "chalk": "^2.4.1",
     "debug": "^3.1.0",
     "express": "^4.16.3",
-    "platziversedb": "file:../platziverse-db"
+    "platziverse-common": "file:../platziverse-common",
+    "platziverse-db": "file:../platziverse-db"
   }
 }
