--- a/platziverse-api/package.json
+++ b/platziverse-api/package.json
@@ -17,6 +17,8 @@
     "ava": "^0.25.0",
     "express-asyncify": "^1.0.0",
     "nodemon": "^1.17.5",
+    "proxyquire": "^2.0.1",
+    "sinon": "^6.0.1",
     "standard": "^11.0.1",
     "supertest": "^3.1.0"
   },
