[Web] Integrate agent module with socket.io

--- a/platziverse-web/package.json
+++ b/platziverse-web/package.json
@@ -20,6 +20,7 @@
     "chalk": "^2.4.1",
     "debug": "^3.1.0",
     "express": "^4.16.3",
+    "platziverse-agent": "file:../platziverse-agent",
     "socket.io": "^2.1.1"
   }
 }
