--- a/platziverse-web/package.json
+++ b/platziverse-web/package.json
@@ -42,7 +42,9 @@
     "debug": "^3.1.0",
     "express": "^4.16.3",
     "express-asyncify": "^1.0.0",
+    "moment": "^2.22.2",
     "platziverse-agent": "file:../platziverse-agent",
+    "random-material-color": "^1.0.3",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
     "socket.io": "^2.1.1",
