--- a/platziverse-web/package.json
+++ b/platziverse-web/package.json
@@ -48,6 +48,7 @@
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
     "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "vue": "^2.4.2",
     "vue-chartjs": "^2.8.1"
   }
