--- a/platziverse-cli/package.json
+++ b/platziverse-cli/package.json
@@ -17,6 +17,8 @@
     "args": "^5.0.0",
     "blessed": "^0.1.81",
     "blessed-contrib": "^4.8.5",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "moment": "^2.22.2",
+    "platziverse-agent": "file:../platziverse-agent"
   }
 }
