--- a/platziverse-db/package.json
+++ b/platziverse-db/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "ava": "^0.24.0",
     "eslint": "^4.19.1",
+    "longjohn": "^0.2.12",
     "nyc": "^11.7.1",
     "proxyquire": "^2.0.1",
     "sinon": "^4.5.0",
