--- a/platziverse-web/package.json
+++ b/platziverse-web/package.json
@@ -6,41 +6,32 @@
   "scripts": {
     "start": "NODE_ENV=production node server.js",
     "prestart": "npm run build",
+    "build": "NODE_ENV=production browserify -g envify -t babelify -t vueify client/app.js | uglifyjs -c -m -o public/bundle.js",
     "start-dev": "DEBUG=platziverse:* nodemon server.js",
-    "prestart-dev": "npm run build",
-    "build": "browserify -g envify -t babelify -t vueify client/app.js -o public/bundle.js",
+    "prestart-dev": "npm run build-dev",
+    "build-dev": "browserify -g envify -t babelify -t vueify client/app.js -o public/bundle.js",
     "lint": "standard"
   },
   "author": "Fabián Veliz <velizfabianhoracio@gmail.com> (https://twitter.com/fabianvelizok)",
   "license": "MIT",
   "repository": "git@github.com:fabianvelizok/platziverse.git",
   "private": true,
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015"
-          ]
-        }
-      ]
-    ]
-  },
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
+    "envify": "^4.1.0",
     "nodemon": "^1.17.3",
     "standard": "^11.0.1",
+    "uglify-js": "^3.4.5",
     "vueify": "^9.4.1"
   },
   "dependencies": {
     "chalk": "^2.4.1",
     "chart.js": "^2.6.0",
     "debug": "^3.1.0",
-    "envify": "^4.1.0",
     "express": "^4.16.3",
     "express-asyncify": "^1.0.0",
     "moment": "^2.22.2",
